@@ -194,6 +194,10 @@ int main(void)
 "			       gconstpointer   v2);\n"
 "guint	WIN32_DLL g_int_hash  (gconstpointer   v);\n"
 "\n"
+"gint	WIN32_DLL g_str_equal (gconstpointer   v,\n"
+"			       gconstpointer   v2);\n"
+"guint	WIN32_DLL g_str_hash  (gconstpointer   v);\n"
+"\n"
 "GHashTable WIN32_DLL *g_hash_table_new	(GHashFunc	 hash_func,\n"
 "					 GCompareFunc	 key_compare_func);\n"
 "\n"
